fix dockerfile path issues